<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- UTIL -->
    <string name="app_name">SweAt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="example">This is an Example</string>
    <string name="clear"></string>
    <string name="album_name">droidPhotos</string>
    <string name="ok">Ok</string>
    <string name="motto">Onde você quer suar a camisa hoje?</string>
    <string name="developed">Caio Margutti Alves \n Michelle Galindo \n João Pedro Arantes \n Renato Murakami </string>
    <string name="course">Universidade de Sâo Paulo - Sistemas de Informação \n ACH2006 - CodeSport</string>

    <string name="title_activity_main">MainActivity</string>

    <!-- User -->
    <string name="user_updated">Your user has been updated!</string>
    <string name="user_updated_title">User Update</string>


    <!-- User -->
    <string name="congratulations">Congratulations:</string>
    <string name="try_again">Try Again:</string>

    <!-- Quiz - Question -->
    <string name="number">10</string>
    <string name="quiz">Quiz 1</string>
    <string name="question">What is the number of this question?</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="prompt_question">Question Enunciate</string>
    <string name="prompt_alternative">Alternative Description</string>
    <string name="time_over_title">Time Over</string>
    <string name="time_over_message">Do not worry. You run out of time but all your answers so far are saved!</string>


    <!-- Menus -->
    <string name="action_new">Create Quiz</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in"><b>Sign in</b> </string>
    <string name="new_to_droid">New to droid?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_first_name">Must not contain numbers or special characters</string>
    <string name="error_invalid_last_name">Must not contain numbers or special characters</string>
    <string name="error_invalid_login">Login must be at least 8 characters long</string>
    <string name="error_invalid_password">Password must be at least 8 characters long</string>
    <string name="error_invalid_repassword">The passwords are different</string>
    <string name="error_incorrect_combination">Wrong combination of login and password</string>
    <string name="error_field_required">This field is required</string>

    <!-- Drawer -->
    <string name="first_name">droidClicker</string>
    <string name="last_name">droidClicker</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>


    <!-- Invite -->
    <string name="subject">droidClicker</string>
    <string name="title_activity_invite">Share using&#8230;</string>
    <string name="url_invite_message">https://play.google.com/store?hl=en</string>
    <string name="invite_message">Why to pay for something your cellphone can do for free? Get now droidClicker: https://play.google.com/store?hl=en</string>


    <!-- GPS -->
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <!-- Dialog -->
    <string name="dialog_mark">What do you want to mark here?</string>
    <string name="dialog_maps_styles">Which style of maps do you want to use?</string>
    <string name="dialog_trails_options">Which trail are you searching for?</string>

    <!-- Profile -->
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_gender">Male, Female or free to be yourself?</string>


    <!-- Camera -->
    <string name="btnPhoto">Take Photo</string>
    <string name="btnUpload">Upload Photo</string>
    <string name="btnVideo">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_feature_list">Features</string>
    <string name="title_feature_detail">Feature Detail</string>

    <!-- Dialog -->
    <string name="dialog_title">Retrieval Error</string>
    <string name="dialog_message">We could not retrieve the data. Have you checked your internet connection?</string>

    <!-- Facebook -->
    <string name="app_id">957565094314784</string>
    <string name="login_facebook">Log in with Facebook</string>

    <!-- Google -->
    <string name="login_google">Log in with Google+</string>
    <string name="title_activity_ad">AdActivity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>


</resources>
