    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@color/orange_light"
        style="@style/LoginFormContainer"  >

        <!-- Login progress -->

        <LinearLayout
            android:id="@+id/login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

        <!-- Login form -->

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- Circle Thumbnail with Image -->
            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_user"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:orientation="horizontal" >

                    <com.beardedhen.androidbootstrap.AwesomeTextView
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="24sp"
                        android:text="@string/prompt_first_name"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:layout_margin="4dp"
                        android:layout_weight="0.5" />

                    <com.beardedhen.androidbootstrap.AwesomeTextView
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:text="@string/prompt_last_name"
                        android:gravity="center_vertical|end"
                        android:layout_height="wrap_content"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:layout_margin="4dp"
                        android:layout_weight="0.5"
                        android:textSize="24sp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:orientation="horizontal" >

                    <com.beardedhen.androidbootstrap.AwesomeTextView
                        android:id="@+id/edtGender"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:textSize="20sp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/prompt_gender"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:singleLine="true" />


                    <com.beardedhen.androidbootstrap.AwesomeTextView
                        android:id="@+id/edtAge"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:textSize="20sp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/prompt_age"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:singleLine="true" />


                </LinearLayout>


                    <com.beardedhen.androidbootstrap.AwesomeTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="20sp"
                        android:text="@string/prompt_email"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:singleLine="true" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
